typescript/checker/tests/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments2_es6.ts.stderr
error: Unexpected token Some(LParen)
 --> $DIR/tests/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments2_es6.ts:2:12
  |
2 | var v = { *() { } }
  |            ^

